# toffi

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  gen_vs2019_proj.bat  gen_xcode_proj.sh  toffi.sln
.github/workflows/: cmake-multi-platform.yml  toffi-build.yml
toffi/: toffi.cpp  toffi.vcxproj  toffi.vcxproj.filters
toffi/Assets/: toffi - Ярлык.lnk
toffi/include/: Bullet.h  Player.h  Textures.h  Weapon.h
toffi/include/Enemies/: EnemiesManager.h  Enemy.h  RangeEnemy.h
toffi/include/Engine/: Animation.h  Character.h  Constants.h  GameObject.h  Helpers.hpp  ParticleSystem.h  Pickable.h  PickableSpawner.h  PlayerController.h  Timer.h  ViewController.h  World.h
toffi/include/Pickables/: BulletWave.h  Heal.h
toffi/include/UI/: HealthBar.h
toffi/include/Weapon/: MeleeWeapon.h  RangeWeapon.h  Weapon.h
toffi/src/: Animation.cpp  Bullet.cpp  BulletWave.cpp  Character.cpp  Constants.h  EnemiesManager.cpp  Enemy.cpp  GameManager.cpp  GameManager.h  GameObject.cpp  Heal.cpp  HealthBar.cpp  MeleeWeapon.cpp  ParticleSystem.cpp  Pickable.cpp  PickableSpawner.cpp  Player.cpp  PlayerController.cpp  RangeEnemy.cpp  RangeWeapon.cpp  StateMachine.cpp  StateMachine.h  Textures.cpp  Timer.cpp  ViewController.cpp  Weapon.cpp  World.cpp  toffi.cpp
toffi/src/Controllers/: CashValueController.cpp  CashValueController.h  GamePointsController.cpp  GamePointsController.h  PlayerController.cpp  PlayerController.h  ViewController.cpp  ViewController.h
toffi/src/Database/: DataBaseWrapperBase.cpp  DataBaseWrapperBase.h  GameDataDBWrapper.cpp  GameDataDBWrapper.h
toffi/src/Enemies/: EnemiesManager.cpp  EnemiesManager.h  Enemy.cpp  Enemy.h  RangeEnemy.cpp  RangeEnemy.h
toffi/src/GameScreens/: GameInterfaceScreen.cpp  GameInterfaceScreen.h  GameOverScreen.cpp  GameOverScreen.h  ScreenManager.cpp  ScreenManager.h  UpgradesScreen.cpp  UpgradesScreen.h
toffi/src/Pickables/: BulletWave.cpp  BulletWave.h  Currency.cpp  Currency.h  Heal.cpp  Heal.h  PickableSpawner.cpp  PickableSpawner.h
toffi/src/Player/: Player.cpp  Player.h
toffi/src/Textures/: Textures.cpp  Textures.h
toffi/src/Weapon/: Bullet.cpp  Bullet.h  BulletWaveWeapon.cpp  BulletWaveWeapon.h  MeleeWeapon.cpp  MeleeWeapon.h  RangeWeapon.cpp  RangeWeapon.h  Weapon.cpp  Weapon.h
